[package]
name = "command-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
file-lock = "2.1.9"
md5 = "0.7.0"
serde = { version = "1.0.188", features = ["derive"] }

[profile.release]
opt-level = 2
codegen-units = 1
strip = true
