[package]
name = "command-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
clap = { version = "4.4.6", features = ["derive"] }
file-lock = "2.1.9"
md5 = "0.7.0"
serde = { version = "1.0.188", features = ["derive"] }
shellwords = "1.1.0"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
